fixed text align for mobile

--- a/src/pages/timer/timer.css
+++ b/src/pages/timer/timer.css
@@ -7,6 +7,8 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    padding: 0 1rem;
+    text-align: center;
 }
 
 .timer-heading {
